feat: Integrate picocli for command-line interface and enhance Fibonacci calculation
- Added picocli dependency to pom.xml for command-line argument parsing.
- Refactored HugeFibonacci class to implement Callable interface for better command-line integration.
- Introduced options for saving results, output format, and thresholds for Karatsuba multiplication and toString.
- Implemented a benchmark mode to find optimal thresholds for performance tuning.
- Updated Fibonacci calculation methods to use instance variables for configurable thresholds.
- Enhanced output handling to support both console display and file saving.
- Added a new dependency-reduced POM for shading the application.